# ai-agents-marketplace

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  Taskfile.yml  pyproject.toml  pytest.ini
.config/: black.toml
.github/prompts/: review.prompt.md
assets/2/: agents-marketplace-2.pptx
commands/review/: command.md  metadata.yaml
docs/superpowers/specs/: 2026-06-23-external-plugins-design.md
external-plugins/caveman/: metadata.yaml
external-plugins/context7/: metadata.yaml
external-plugins/ui-ux-pro-max-skill/: metadata.yaml
external-plugins/uipro-cli/: metadata.yaml
plugins/uv-python/: metadata.yaml  plugin.md
rules/no-debug-code/: metadata.yaml  rule.md
skills/create-skill/: metadata.yaml  skill.md
src/: utils.py
src/marketplace/: __init__.py  catalog.py  cli.py  detect.py  installer.py  kinds.py  manifest.py  models.py  utils.py
src/marketplace/cli/: __init__.py  commands.py  render.py  status.py
src/marketplace/cli/generate/: __init__.py  flow.py  prompts.py  render.py
src/marketplace/consts/: agents.py  authoring.py  display.py  kinds.py  manifest.py  render.py
src/marketplace/detect/: __init__.py  base.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  orchestrator.py  runner.py
src/marketplace/installer/: __init__.py  install.py  models.py  plugins.py  rules.py  skills.py  templates.py  writer.py
src/marketplace/kind_catalog/: config.py  kinds.py  loader.py  models.py  registry.py
src/marketplace/manifest/: __init__.py  loader.py  models.py  resolver.py  writer.py
templates/: command.copilot.md.j2  command.cursor.md.j2  rule.copilot.instructions.md.j2  rule.cursor.mdc.j2  skill.md.j2
tests/: conftest.py  test_catalog.py  test_cli.py  test_detect.py  test_installer.py  test_manifest.py
(+44 files in other folders)
