[project]
name = "agents-marketplace"
version = "0.1.0"
description = "Interactive CLI that installs reusable AI skills, plugins, and rules into any project, rendered into each AI coding agent's native format"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Avi Zaguri" }]

keywords = [
    "ai",
    "agents",
    "skills",
    "rules",
    "marketplace",
    "cli",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "InquirerPy>=0.3.4",
    "rich>=13.9.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-base-command>=0.1.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/aviz92/ai-marketplace"
Repository = "https://github.com/aviz92/ai-marketplace"
Issues = "https://github.com/aviz92/ai-marketplace/issues"

[project.scripts]
agents-marketplace = "marketplace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketplace"]

# Ship the authored content + templates inside the wheel so the installed CLI
# can render even when run outside the source repo.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "marketplace/skills"
"plugins" = "marketplace/plugins"
"rules" = "marketplace/rules"
"templates" = "marketplace/templates"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
